All electorates are now listed below the scrolly

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
 
                 <div class="embed-fragment" data-cmid="8637712">
 
-                    <div class="init-interactive" data-scrolly-story-root data-scripts="index.js"></div>
+                    <div class="init-interactive" data-scrolly-story-root data-scripts="index.js" data-data-url="ssm-disagree.csv"></div>
                 </div>
                 <p> </p>
 
