--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                 <a name="mark"> </a>
                 <p>Looks pretty red doesn't it? That's only because the biggest support comes from the smallest electorates.</p>
 
-                <a name="markELECTORATEbrisbane"> </a>
+                <a name="markELECTORATEbrisbaneANDgriffith"> </a>
                 <p>But let's zoom in on brisbane</p>
 
                 <a name="markELECTORATEmelbourne"> </a>
