Adjusted the zoom for mobile

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -184,7 +184,7 @@
                 <p>Mr Entsch has led a campaign within the party to change the Marriage Act and most recently was one of five
                     Liberal MPs pushing for an open vote on the issue in Parliament.</p>
                 <p>Right on 50 per cent of Mr Entsch's electors indicated their support for same-sex marriage, compared to XX
-                    per cent who said they agreed marriage should be only between a man and a woman.</p><a name="markELECTORATEmaranoa"> </a>
+                    per cent who said they agreed marriage should be only between a man and a woman.</p><a name="markELECTORATEmaranoaZOOM3"> </a>
                 <p>Elsewhere in regional Queensland we find the seat where voters are the least supportive of same-sex marriage
                     out of anywhere in the nation, Maranoa.</p>
                 <p>Vote Compass tells us that only 32 per cent of Maranoa voters - about Xx,XXX people - disagree with the statement
